lob them in a clumsily assembled table

--- a/resources/week.html
+++ b/resources/week.html
@@ -5,6 +5,25 @@
     <title></title>
 </head>
 <body>
-    <h1></h1>
+    <h1>Si's Commutes this week</h1>
+    <p>Mostly an experiment with the Clojure web stack.</p>
+    <table>
+        <thead>
+            <tr>
+                <th>Name</th>
+                <th>Start Time (local)</th>
+                <th>Elapsed Time</th>
+                <th>ID</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Witty Strava name</td>
+                <td>Time I finally got out the door</td>
+                <td>Took my slow arse this long to run it</td>
+                <td><a href="https://www.strava.com/activities/1">Link to the run</a></td>
+            </tr>
+        </tbody>
+    </table>
 </body>
 </html>
