replace elapsed time with calculated end time

--- a/resources/week.html
+++ b/resources/week.html
@@ -12,7 +12,7 @@
             <tr>
                 <th>Name</th>
                 <th>Start Time (local)</th>
-                <th>Elapsed Time</th>
+                <th>End Time (local)</th>
                 <th>ID</th>
             </tr>
         </thead>
