Add skeleton.css, make pretty

--- a/resources/week.html
+++ b/resources/week.html
@@ -3,27 +3,36 @@
 <head>
     <meta charset="utf-8" />
     <title></title>
+
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="/css/normalize.css">
+    <link rel="stylesheet" href="/css/skeleton.css">
+    <link rel="stylesheet" href="css/style.css">
+
 </head>
 <body>
-    <h1>Si's Commutes this week</h1>
-    <p>Mostly an experiment with the Clojure web stack.</p>
-    <table>
-        <thead>
-            <tr>
-                <th>Name</th>
-                <th>Start Time (local)</th>
-                <th>End Time (local)</th>
-                <th>ID</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>Witty Strava name</td>
-                <td>Time I finally got out the door</td>
-                <td>Took my slow arse this long to run it</td>
-                <td><a href="https://www.strava.com/activities/1">Link to the run</a></td>
-            </tr>
-        </tbody>
-    </table>
+    <div class="container">
+        <h1>Si's Commutes this week</h1>
+        <p>Mostly an experiment with the Clojure web stack.</p>
+        <table>
+            <thead>
+                <tr>
+                    <th>Name</th>
+                    <th>Start Time (local)</th>
+                    <th>End Time (local)</th>
+                    <th>ID</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Witty Strava name</td>
+                    <td>Time I finally got out the door</td>
+                    <td>Took my slow arse this long to run it</td>
+                    <td><a href="https://www.strava.com/activities/1">Link to the run</a></td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
 </body>
 </html>
